# n8n_whisper_API

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  generate_env.py  generate_test_audio.py  pyproject.toml  requirements.txt  run_dev.py  test.txt  test_api.py
src/insanely_fast_whisper_api/: __init__.py  __main__.py
src/insanely_fast_whisper_api/app/: __init__.py  app.py  worker.py
static/: index.html  tailwind.config.js  upload.html
static/templates/: admin.html
