[tool.poetry]
name = "insanely-fast-whisper-api"
version = "0.1.0"
description = "A FastAPI-based API for the Whisper speech recognition model"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "insanely_fast_whisper_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
transformers = "^4.30.0"
torch = "^2.0.0"
pydantic = "^1.9.0"
python-multipart = "^0.0.5"
ffmpeg-python = "^0.2.0"
redis = "^4.5.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
